Interface d'administration unifiée

--- a/html/adminAnnonces.html
+++ b/html/adminAnnonces.html
@@ -67,11 +67,11 @@
   <div id="rightcolumnAdmin">
   <div id="page-wrapAdmin">
   	<ul id="main-nav">
-  		<li class="accueil"><a href="adminGestion.html">Accueil</a></li>
-  		<li class="current"><a href="adminAnnonces.html">Annonces</a></li>
-  		<li class="utilisateurs"><a href="adminUtilisateurs.html">Utilisateurs</a></li>
-  		<li class="rubriques"><a href="adminRubriques.html">Rubriques</a></li>
-  		<li class="forum"><a href="adminForum.html">Forum</a></li>
+  		<li class="accueil"><a href="/admin">Accueil</a></li>
+  		<li class="current"><a href="/admin/annonces">Annonces</a></li>
+  		<li class="utilisateurs"><a href="/admin/users">Utilisateurs</a></li>
+  		<li class="rubriques"><a href="/admin/rubriques">Rubriques</a></li>
+  		<li class="forum"><a href="/admin/forum">Forum</a></li>
   	</ul>
   	<div class="clear">
   	</div>
@@ -81,15 +81,15 @@
   			<div id="tabannonceAdmin" align="center"><table width=100% height=320px border=1>
   				<tr>
   				<td width=20% height=33% align="center">Sélection</td>
-  				<td width=80% height=33% align="center">ANNONCE 1</td>
+  				<td width=80% height=33% align="center">ANNONCE 1<a href="/admin/annonce?a_id=1" style="color: blue;">Gérer Annonce</a></td>
   				</tr>
   				<tr>
   				<td width=20% height=33% align="center">Sélection</td>
-  				<td width=80% height=33% align="center">ANNONCE 2</td>
+  				<td width=80% height=33% align="center">ANNONCE 2<a href="/admin/annonce?a_id=2" style="color: blue;">Gérer Annonce</a></td>
   				</tr>
   				<tr>
   				<td width=20% height=34% align="center">Sélection</td>
-  				<td width=80% height=34% align="center">ANNONCE 3</td>
+  				<td width=80% height=34% align="center">ANNONCE 3<a href="/admin/annonce?a_id=3" style="color: blue;">Gérer Annonce</a></td>
   				</tr>
   				</table>
   				</div>
