--- a/html/adminUtilisateur.html
+++ b/html/adminUtilisateur.html
@@ -74,31 +74,30 @@
 				<div class="clear"></div>
 				<div id="featuredAdmin">
 					<div class="content-box">
-						<div class="whitebox">
+						<div class="box">
 							<div class="sub_box1">
-								Rechercher un user :
-								<p>
-									dans <select name="section">
-										<option value="volvo">XXXXX</option>
-										<option value="saab">XXXXXX</option>
-										<option value="fiat">XXXXXXX</option>
-										<option value="audi">XXXXXXXXX</option>
-									</select> l'élément <input type="text" size="30" />
-								</p>
-								<p>
-									<a href="ResultatRecherche.html" target="_blank"> <input
-										type="button" value="Lancer la recherche"></a>
+								<a href="mesFavoris.html">Mes Favoris</a>
 							</div>
-
-
 						</div>
-						<div>
-							<br/><br/>
-							<h2>Derniers utilisateurs inscrits</h2>
-							<ul>
-								<li><a href="/admin/user?user=gauchatl">Gauchatl</a></li>
-								<li><a href="/admin/user?user=dreyerc">Dreyerc</a></li>
-							</ul>
+
+						<div class="box">
+							<div class="sub_box1">
+								<a href="mesAnnonces.html">Mes annonces</a>
+							</div>
+						</div>
+
+						<div class="box">
+							<div class="sub_box1">Mon Profil</div>
+						</div>
+
+						<div class="box">
+							<div class="sub_box1">Confidentialité</div>
+						</div>
+
+						<div class="box">
+							<div class="sub_box1">
+								<a href="GestionUserAdmin.html">Rechercher user </a>
+							</div>
 						</div>
 					</div>
 				</div>
